--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "npm run serve",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "dev": "concurrently --kill-others \"npm run watch-ts\" \"npm run watch-node\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "nodemon": "^1.18.3",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
